# ErinCall

./: .gitignore  LICENSE  README.md  andrewlorente.cabal  erincall.cabal  fabfile.py
snaplets/heist/templates/: _error.tpl  _info.tpl  about_transgender.tpl  base.tpl  frustrate_them_for_a_lifetime.tpl  index.tpl  learning_rust.tpl  logged_in.tpl  login.tpl  pgp.tpl  presentation.tpl  project.tpl  resume.tpl  resume_tw.tpl  secrets_in_source_control.tpl  small_languages.tpl
src/: Application.hs  Database.hs  Site.hs  Splices.hs
src/OpenId/: Message.hs
src/Site/: Login.hs  OpenIDAuth.hs  OpenId.hs
static/: ecall.pub  posts.atom  robots.txt  screen.css
static/css/: big.css  presentation.css  print.css  screen.css
static/js/: big.js  site.js
test/: Test.hs  TestDatabase.hs  TestOpenIDProvidence.hs  test-andrewlorente.cabal
