Name:                erincall
Version:             0.1
Synopsis:            Website backing erincall.com
Description:         A fairly simple Snap application
License:             MIT
Author:              Erin Call
Maintainer:          hello@erincall.com
Stability:           Experimental
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

Executable erincall
  hs-source-dirs: src
  main-is: Main.hs

  Build-depends:
    either,
    bytestring                >= 0.9.1   && < 0.11,
    heist,
    MonadCatchIO-transformers >= 0.2.1   && < 0.4,
    mtl                       >= 2       && < 3,
    snap,
    snap-core,
    snap-extras,
    snap-server,
    snap-loader-static,
    text,
    time,
    xmlhtml                   >= 0.1,
    xhtml-combinators,
    transformers              >= 0.3,
    base                      >= 4.4      && < 5,
    lens

  if flag(development)
    build-depends:
      snap-loader-dynamic == 0.10.*
    cpp-options: -DDEVELOPMENT
    -- In development mode, speed is already going to suffer, so skip
    -- the fancy optimization flags.  Additionally, disable all
    -- warnings.  The hint library doesn't give an option to execute
    -- compiled code when there were also warnings, so disabling
    -- warnings allows quicker workflow.
    ghc-options: -threaded -w
  else
    if impl(ghc >= 6.12.0)
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans -fno-warn-unused-do-bind
    else
      ghc-options: -threaded -Wall -fwarn-tabs -funbox-strict-fields -O2
                   -fno-warn-orphans
